# xsse

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
tests/: CMakeLists.txt  test_abs.c  test_add_basic.c  test_add_overflow.c  test_add_underflow.c  test_adds.underflow.c  test_adds_basic.c  test_adds_overflow.c  test_alignr.c  test_avg.c  test_bitshift_left.c  test_bitshift_right.c  test_bitshift_right_arithmetic.c  test_bitwise.c  test_blend.c  test_clflush.c  test_compare.c  test_crc.c  test_cvtep.c  test_cvtsi.c  test_extract.c  test_fence.c  test_hadd.c  test_hsub.c  test_insert.c  test_load.c  test_madd.c  test_mask.c  test_max.c  test_min.c  test_move.c  test_movemask.c  test_mul.c  test_packs.c  test_pause.c  test_sad.c  test_set.c  test_set1.c  test_setr.c  test_setzero.c  (+12 more)
tests/avx/: CMakeLists.txt  test_avx_abs.c  test_avx_add.c  test_avx_adds.c  test_avx_alignr.c  test_avx_avg.c  test_avx_bitshift_left.c  test_avx_bitshift_right.c  test_avx_bitshift_right_arithmetic.c  test_avx_bitwise.c  test_avx_blend.c  test_avx_broadcast.c  test_avx_cast.c  test_avx_compare.c  test_avx_cvtep.c  test_avx_extract.c  test_avx_gather.c  test_avx_hadd.c  test_avx_hsub.c  test_avx_insert.c  test_avx_load.c  test_avx_max.c  test_avx_min.c  test_avx_movemask.c  test_avx_mul.c  test_avx_others.c  test_avx_pack.c  test_avx_set.c  test_avx_set1.c  test_avx_setr.c  test_avx_shuffle.c  test_avx_sign.c  test_avx_store.c  test_avx_sub.c  test_avx_subs.c  test_avx_test.c  test_avx_unpack.c  test_avx_zext.c
tests/sse/: CMakeLists.txt  test_abs.c  test_add_basic.c  test_add_overflow.c  test_add_underflow.c  test_adds.underflow.c  test_adds_basic.c  test_adds_overflow.c  test_alignr.c  test_avg.c  test_bitshift_left.c  test_bitshift_right.c  test_bitshift_right_arithmetic.c  test_bitwise.c  test_blend.c  test_clflush.c  test_compare.c  test_crc.c  test_cvtep.c  test_cvtsi.c  test_extract.c  test_fence.c  test_hadd.c  test_hsub.c  test_insert.c  test_load.c  test_madd.c  test_mask.c  test_max.c  test_min.c  test_move.c  test_mul.c  test_packs.c  test_pause.c  test_sad.c  test_set.c  test_set1.c  test_setr.c  (+11 more)
(+118 files in other folders)
